--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
         <title>Computação Quântica</title>
         <style>
 
@@ -166,7 +166,6 @@
             <h2>São computadores capazes de processar volumes de dados exorbitantes que um
                 computador comum não poderia através de algoritmos quânticos.
             </h2>
-            <img src="img1.webp" style="width: 320px; margin-top: -105px;">
         </div>
         <br>
         <div class="container">
