--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" content="width=device-width,height=device-height,initial-scale=1.0"/>
         <title>Computação Quântica</title>
         <style>
 
