--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="header">
             <h1>Computadores Quânticos:</h1>
             <h2>São computadores capazes de processar volumes de dados exorbitantes que um
-                computador comum não poderia através de algoritmos quânticos.
+                computador comum não poderia através de algoritmos quânticos. (V5)
             </h2>
         </div>
         <br>
