--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8" content="width=device-width,height=device-height,initial-scale=1.0"/>
         <title>Computação Quântica</title>
+        <script>
+            screen.orientation.lock(landscape-primary);
+        </script>
         <style>
 
             * {
@@ -153,18 +156,6 @@
         </style>
     </head>
     <body>
-        <script>
-            document.addEventListener("orientationchange", function(event){
-    switch(window.orientation) 
-    {  
-        case -90: case 90:
-            /* Device is in landscape mode */
-            break; 
-        default:
-            /* Device is in portrait mode */
-    }
-});
-        </script>
         <div class="nav-container">
             <a href="#menu1" style="background-color: rgb(30, 30, 50);">O que são?</a>
             <a href="#menu2" style="background-color: rgb(40, 40, 60);">Como Ingressar</a>
@@ -175,7 +166,7 @@
         <div class="header">
             <h1>Computadores Quânticos:</h1>
             <h2>São computadores capazes de processar volumes de dados exorbitantes que um
-                computador comum não poderia através de algoritmos quânticos. (V5)
+                computador comum não poderia através de algoritmos quânticos. (V6)
             </h2>
         </div>
         <br>
