--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
     <head>
         <meta charset="UTF-8" content="width=device-width,height=device-height,initial-scale=1.0"/>
         <title>Computação Quântica</title>
-        <script>
-            screen.orientation.lock(landscape-primary);
-        </script>
         <style>
 
             * {
                 box-sizing: border-box;
+            }
+
+            @media only screen and (max-width: 768px) {
+
+                .box-left {
+                background-image: linear-gradient(to bottom, rgb(17, 17, 17), rgb(24, 24, 31));
+                margin-right: 80px;
+                grid-column-start: 1;
+                grid-column-end: 8;
+                border-width: 5px;
+                border-style: solid;
+            }
+
             }
 
             body {
