--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
                 border-style: solid;
             }
 
+                .box-right {
+                background-image: linear-gradient(to bottom, rgb(17, 17, 17), rgb(24, 24, 31));
+                margin-left: 80px;
+                grid-column-start: 1;
+                grid-column-end: 8;
+                border-width: 5px;
+                border-style: solid;
+            }
+
             }
 
             body {
@@ -176,7 +185,7 @@
         <div class="header">
             <h1>Computadores Quânticos:</h1>
             <h2>São computadores capazes de processar volumes de dados exorbitantes que um
-                computador comum não poderia através de algoritmos quânticos. (V6)
+                computador comum não poderia através de algoritmos quânticos. (V8)
             </h2>
         </div>
         <br>
