--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
                 box-sizing: border-box;
             }
 
+            @media only screen and (min-width: 768px) {
+
             body {
                 background-image: linear-gradient(to right, rgb(0, 7, 14), rgb(0, 5, 10));
                 margin: 0;
@@ -150,28 +152,7 @@
             .blank-box {
                 margin-top: 200px;
             }
-
-            @media only screen and (max-width: 768px) {
-
-                .box-left {
-                background-image: linear-gradient(to bottom, rgb(17, 17, 17), rgb(24, 24, 31));
-                margin-right: 80px;
-                grid-column-start: 1;
-                grid-column-end: 7;
-                border-width: 5px;
-                border-style: solid;
-                }
-
-                .box-right {
-                background-image: linear-gradient(to bottom, rgb(17, 17, 17), rgb(24, 24, 31));
-                margin-left: 80px;
-                grid-column-start: 2;
-                grid-column-end: 8;
-                border-width: 5px;
-                border-style: solid;
-                }
-            }
-
+        }
         </style>
     </head>
     <body>
@@ -185,7 +166,7 @@
         <div class="header">
             <h1>Computadores Quânticos:</h1>
             <h2>São computadores capazes de processar volumes de dados exorbitantes que um
-                computador comum não poderia através de algoritmos quânticos. (V9)
+                computador comum não poderia através de algoritmos quânticos. (V10)
             </h2>
         </div>
         <br>
