--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <div class="header">
             <h1>Computadores Quânticos:</h1>
             <h2>São computadores capazes de processar volumes de dados exorbitantes que um
-                computador comum não poderia através de algoritmos quânticos. (V15)
+                computador comum não poderia através de algoritmos quânticos.
             </h2>
         </div>
         <br>
